<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Property Search</string>
    <string name="Enter">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="instruction">Enter Your login Credentials to Access Service.</string>
    <string name="username">Enter your Username</string>
    <string name="idhint">martha</string>
    <string name="passcode">Enter your Password</string>
    <string name="passhint">**********</string>
    <string name="login">Login</string>
    <string name="updatepass">Forgot Pasword?</string>
    <string name="register">New User Regstration</string>
    <string name="instruction2">Fill in the spaces to reset your password</string>
    <string name="newpasscode">Enter your new Password</string>
    <string name="confirmpass">Confirm your Password</string>
    <string name="update">Update</string>
    <string name="instruction3">Fill the spaces to register as user</string>
    <string name="firstname">Enter Firstname</string>
    <string name="fnamehint">John</string>
    <string name="secondname">Enter Secondname</string>
    <string name="snamehint">Doe</string>
    <string name="gender1">Select your Gender</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="occupation">Enter your occupation</string>
    <string name="occupationhint">Engineer</string>
    <string name="email">Enter your Email Address</string>
    <string name="emailhint">johndoe@propertyapp.com</string>
    <string name="telephone">Enter your Telephone number</string>
    <string name="telhint">+254700000000</string>
    <string name="submit">Submit</string>
    <string name="Search">Select a Search creteria to Search Property</string>
    <string name="property">Select property</string>
    <string-array name="propertysearch">>
      <item>Land</item>
      <item>Commercial House</item>
      <item>Residential House</item>
    </string-array>
    <string name="location">Enter location if any</string>
    <string name="lochint">Kahawa</string>
    <string name="searchbtn">Search</string>
    <string name="address">Enter your address</string>
    <string name="addhint">21461-00505</string>
    <string name="badpasscode">Incorrect password</string>
    <string name="Notice">Warning</string>
    <string name="addland">Add Land</string>
    <string name="addresdential">Add Residential House</string>
    <string name="addcommercial">Add Commercial House</string>
    <string name="search">Search Property</string>
    <string name="reset">Reset</string>
    <string name="register1">Register User</string>
    <string name="pname">Enter Propety Name</string>
    <string name="pnamehint">SouthGate</string>
    <string name="psize">Enter Property Size</string>
    <string name="psizehint">3 acres</string>
    <string name="psizehhint">4 story</string>
    <string name="plocation">Enter Property Location</string>
    <string name="plocationhint">Kahawa</string>
    <string name="ltitle">Enter Land Title</string>
    <string name="ltitlehint">6757575675</string>
    <string name="pinstruction">Fill to post New Property</string>
    <string name="bnumber">Enter Building Number</string>
    <string name="bnumberhint">65</string>
    <string name="nor">Enter the Number of Rooms</string>
    <string name="more">Add Property</string>
    <string name="norhint">4 bedroom</string>
    <string name="price">Enter the Property Price</string>
    <string name="pricehint">$40000</string>
    <string name="type">Enter Property Purpose</string>
    <string-array name="purpose">
        <item>For Sale</item>
        <item>For Rent</item>
        <item>For Lease</item>
    </string-array>
    
</resources>
