<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#BCC6CC"
    tools:context=".Register" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="629dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/instruction3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/firstname"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:hint="@string/fnamehint" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fname"
            android:layout_below="@+id/fname"
            android:text="@string/secondname"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp" 
            android:hint="@string/snamehint"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sname"
            android:layout_below="@+id/sname"
            android:text="@string/gender1"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:entries="@array/gender"
            android:layout_marginBottom="10dp"
            android:prompt="@string/gender1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/gender"
            android:text="@string/username"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/idno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:ems="10"
            android:hint="@string/idhint"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/idno"
            android:layout_below="@+id/idno"
            android:text="@string/occupation"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:ems="10" 
            android:layout_marginBottom="10dp"
            android:hint="@string/occupationhint"/>
        
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/occupation"
            android:layout_below="@+id/occupation"
            android:text="@string/address"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:ems="10" 
            android:layout_marginBottom="10dp"
            android:hint="@string/addhint"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address"
            android:layout_below="@+id/address"
            android:text="@string/email"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:hint="@string/emailhint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_below="@+id/email"
            android:text="@string/telephone"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:ems="10"
            android:inputType="phone" 
            android:layout_marginBottom="10dp"
            android:hint="@string/telhint"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/telephone"
            android:layout_below="@+id/telephone"
            android:text="@string/passcode"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:ems="10"
            android:hint="@string/passhint"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/password"
            android:text="@string/confirmpass"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/passwordcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:ems="10"
            android:hint="@string/passhint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordcon"
            android:layout_below="@+id/passwordcon"
            android:layout_marginTop="19dp"
            android:text="@string/submit" />
        
    </RelativeLayout>
</ScrollView>