<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#BCC6CC"
   	tools:context=".Land"
    >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:text="@string/pinstruction" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="16dp"
            android:text="@string/psize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pukubwa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:hint="@string/psizehint"
            android:layout_marginTop="8dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pukubwa"
            android:layout_below="@+id/pukubwa"
            android:layout_marginTop="24dp"
            android:text="@string/plocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/plocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="14dp"
            android:ems="10" 
            android:hint="@string/plocationhint"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/plocation"
            android:layout_below="@+id/plocation"
            android:layout_marginTop="16dp"
            android:text="@string/pname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="15dp"
            android:ems="10" 
            android:hint="@string/pnamehint"/>
         <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name3"
            android:layout_below="@+id/name3"
            android:layout_marginTop="16dp"
            android:text="@string/ltitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/landtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="15dp"
            android:ems="10" 
            android:hint="@string/ltitlehint"/>
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/landtitle"
            android:layout_below="@+id/landtitle"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="15dp"
            android:ems="10" 
            android:hint="@string/pricehint"
            android:inputType="number"/>
                 
    	<TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/price"
            android:layout_below="@+id/price"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="15dp"
            android:ems="10" 
            android:hint="@string/idhint"/>
       <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user1"
            android:layout_below="@+id/user1"
            android:layout_marginTop="18dp"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/typel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_centerVertical="true"
            android:layout_marginTop="13dp"
			android:entries="@array/purpose"
			android:prompt="@string/type"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/typel"
            android:layout_below="@+id/typel"
            android:layout_marginTop="31dp"
            android:text="@string/submit" />

    </RelativeLayout>
</ScrollView>