<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="#BCC6CC"
    android:fillViewport="true"
    tools:context=".Land" >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/pinstruction"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="16dp"
            android:text="@string/pname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/pnamehint" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pname"
            android:layout_below="@+id/pname"
            android:layout_marginTop="15dp"
            android:text="@string/psize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/psize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/psizehhint" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/psize"
            android:layout_below="@+id/psize"
            android:layout_marginTop="16dp"
            android:text="@string/plocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/plocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/plocationhint" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/plocation"
            android:layout_below="@+id/plocation"
            android:layout_marginTop="16dp"
            android:text="@string/bnumber"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/bnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:ems="10"
            android:hint="@string/bnumberhint"
            android:layout_marginTop="16dp" />
         <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bnumber"
            android:layout_below="@+id/bnumber"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:ems="10"
            android:hint="@string/pricehint"
            android:layout_marginTop="16dp" 
            android:inputType="number"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/price"
            android:layout_below="@+id/price"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/user3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="15dp"
            android:ems="10" 
            android:hint="@string/idhint"/>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user3"
            android:layout_below="@+id/user3"
            android:layout_marginTop="18dp"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/typec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_centerVertical="true"
            android:layout_marginTop="13dp"
			android:entries="@array/purpose"
			android:prompt="@string/type"/>

        <Button
            android:id="@+id/csubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/typec"
            android:layout_below="@+id/typec"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit" />

    </RelativeLayout>
    </ScrollView>