<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#BCC6CC"
   	tools:context=".Land"
    >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:text="@string/pinstruction"
            android:textAppearance="?android:attr/textAppearanceMedium" />
         <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="16dp"
            android:text="@string/pname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/pnamehint" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pname1"
            android:layout_below="@+id/pname1"
            android:layout_marginTop="15dp"
            android:text="@string/psize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/psize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/psizehhint" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/psize1"
            android:layout_below="@+id/psize1"
            android:layout_marginTop="16dp"
            android:text="@string/plocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/plocation1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/plocationhint" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/plocation1"
            android:layout_below="@+id/plocation1"
            android:layout_marginTop="16dp"
            android:text="@string/nor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:ems="10"
            android:hint="@string/norhint"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/rsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nor"
            android:layout_below="@+id/nor"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit" />

    </RelativeLayout>
    </ScrollView>